<resources>
    <string name="app_name">News</string>
    <string name="label_main_activity">Main Activity</string>
    <string name="label_menu_activity">Настройки</string>
    <string name="btn_start_refresh">Обновлять новости</string>
    <string name="btn_stop_refresh">Не обновлять новости</string>
    <string name="btn_menu_activity">Настройки</string>
    <string name="btn_take_news">Обновить</string>
    <string name="btn_first_topic">Auto</string>
    <string name="btn_secound_topic">IT</string>
    <string name="btn_third_topic">Health</string>
</resources>
